fix sizing on main title on mobile

--- a/public/css/dashboard-application.css
+++ b/public/css/dashboard-application.css
@@ -121,11 +121,11 @@
 .row {
 	/* text-align: center; */
 }
-.row h1 {
+.mainHeader h1 {
 	text-align: center;
 	display: inline-block;
 	background-color: #efa516;
-	/* width: 100%; */
+	overflow-wrap: break-word;
 	width: 682px;
 	height: 76px;
 	padding: 15px 0px 15px 0px;
@@ -137,6 +137,13 @@
 	line-height: 47px;
 	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	margin-bottom: 15px;
+}
+
+@media (max-width: 682px) {
+	.mainHeader h1{
+		width: 100%;
+		height: 100%;
+	}
 }
 
 /* Header for each subsection */
